# b3-lattice-summaries

./: .gitignore  .gitmodules  Makefile  README.md  conftest.py  deploy.sh  dodo.py  index.html  index.json  pyproject.toml  twiss.ele
andreas/bessy2_design-1996_v_1/: index.json
andreas/bessy2_q5t2off-2019-05-07_v_turn-off-23-22-22/: index.json
andreas/bessy2_q5t2off-2019-05-07_v_turn-off-23-22-22/apace/: twiss_tables.json
andreas/bessy2_q5t2off-2019-05-07_v_turn-off-23-22-22/elegant/: twiss_tables.json
andreas/bessy2_q5t2off-2019-05-07_v_turn-off-23-22-22/madx/: twiss_tables.json
andreas/bessy2_stduser-2019-05-07-v_1/: index.json
elegant/: twiss_tables.toml
goslawski/mls2_scaled-from-bessy2_v_wp-x9211-y3153/: index.json
goslawski/mls2_scaled-from-bessy2_v_wp-x9211-y3153/apace/: twiss_tables.json
goslawski/mls2_scaled-from-bessy2_v_wp-x9211-y3153/elegant/: twiss_tables.json
goslawski/mls2_scaled-from-bessy2_v_wp-x9211-y3153/madx/: twiss_tables.json
hwang/bessy3_4sexts_v_1/: index.json
hwang/bessy3_4sexts_v_1/elegant/: twiss_tables.json
hwang/bessy3_4sexts_v_1/madx/: twiss_tables.json
hwang/bessy3_5sexts_v_1/: index.json
hwang/bessy3_5sexts_v_1/apace/: twiss_tables.json
hwang/bessy3_5sexts_v_1/elegant/: twiss_tables.json
hzb/bessy2_design-1996_v_1/: index.json
hzb/bessy2_design-1996_v_1/apace/: twiss_tables.json
hzb/bessy2_design-1996_v_1/elegant/: twiss_tables.json
hzb/bessy2_design-1996_v_1/madx/: twiss_tables.json
hzb/bessy2_stduser-2019-05-07-v_1/: index.json
hzb/bessy2_stduser-2019-05-07-v_1/apace/: twiss_tables.json
hzb/bessy2_stduser-2019-05-07-v_1/elegant/: twiss_tables.json
hzb/bessy2_stduser-2019-05-07-v_1/madx/: twiss_tables.json
kuske/bessy3_5ba-20p_v_long-bend-tgrb/: index.json
kuske/bessy3_5ba-20p_v_long-bend-tgrb/elegant/: twiss_tables.json
kuske/bessy3_5ba-20p_v_reference/: index.json  lattice_info.json
kuske/bessy3_5ba-20p_v_reference/apace/: twiss_tables.json
kuske/bessy3_5ba-20p_v_reference/elegant/: twiss_tables.json
kuske/bessy3_5ba-20p_v_reference/madx/: twiss_tables.json
scripts/: __init__.py  data_apace.py  data_elegant.py  data_lattice_info.py  data_madx.py  elegant.py  pages.py  plots.py
summary/b2_design_lattice_1996/apace/: index.html  twiss_tables.json
summary/b2_stduser_2019_05_07/apace/: index.html  twiss_tables.json
summary/hwang_4sexts/elegant/: index.html  twiss_tables.json
summary/hwang_5sexts/elegant/: index.html  twiss_tables.json
summary/kuske_5bend_20p_longbend-tg-tgrb/elegant/: index.html  twiss_tables.json
summary/kuske_5bend_20p_reference/apace/: index.html  twiss_tables.json
summary/kuske_5bend_20p_reference/elegant/: index.html  twiss_tables.json
summary/kuske_5bend_20p_reference/madx/: index.html  twiss_tables.json
templates/: apace_summary.html  elegant_summary.html  index.html  madx_summary.html  summary.html
tests/: test_apace.py  test_b3.py  test_elegant.py  test_lattice_info.py  test_madx.py
website/src/: App.vue
