[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Automatic generation of B3 lattice summaries"
authors = ["Felix Andreas <felix.andreas95@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# apace = { path = "../../andreasfelix/apace", develop = true }
# eleganttools = { path = "../eleganttools", develop = true }
# LatticeJSON = { path = "../../latticejson/", develop = true 
apace = { git = "https://github.com/andreasfelix/apace.git", branch = "master" }
eleganttools = { git = "https://github.com/nobeam/eleganttools.git", branch = "master" }
LatticeJSON = "^0.1.5"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
tomlkit = "^0.7.0"
cpymad = "^1.6.2"
doit = "^0.33.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = { version = "^20.8b1", allow-prereleases = true }
pylint = "^2.6.0"
rope = "^0.18.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
